--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   country_code_picker_plus: ^0.1.0+1
   lottie: ^3.2.0
   font_awesome_flutter: ^10.12.0
+  marquee: ^2.3.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
